# aa-fleetpings

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  codecov.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: automated-checks.yml  black.yml  pre-commit.yml  pypi-package-build-test.yml  pypi-release.yml  release.yml
.make/conf.d/: django.mk
fleetpings/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  constants.py  form.py  managers.py  models.py  providers.py  tasks.py  tests.py  urls.py  utils.py  views.py
fleetpings/helper/: discord_webhook.py  eve_images.py  ping_context.py  static_files.py  urls.py
fleetpings/locale/: django.pot
fleetpings/locale/cs/LC_MESSAGES/: django.mo  django.po
fleetpings/locale/cs_CZ/LC_MESSAGES/: django.mo  django.po
fleetpings/locale/de/LC_MESSAGES/: django.mo  django.po
fleetpings/locale/en/LC_MESSAGES/: django.po
fleetpings/locale/es/LC_MESSAGES/: django.mo  django.po
fleetpings/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
fleetpings/locale/it_IT/LC_MESSAGES/: django.mo  django.po
fleetpings/locale/ja/LC_MESSAGES/: django.mo  django.po
fleetpings/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
fleetpings/locale/nl/LC_MESSAGES/: django.mo  django.po
fleetpings/locale/nl_NL/LC_MESSAGES/: django.mo  django.po
fleetpings/locale/pl_PL/LC_MESSAGES/: django.mo  django.po
fleetpings/locale/ru/LC_MESSAGES/: django.mo  django.po
fleetpings/locale/sk/LC_MESSAGES/: django.mo  django.po
fleetpings/locale/uk/LC_MESSAGES/: django.mo  django.po
fleetpings/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
fleetpings/migrations/: 0001_initial.py  0002_webhook_is_embed_description_change.py  0003_fleetdoctrine_link.py  0004_auto_20200915_1617.py  0005_fleettype_restricted_to_group.py  0006_fleetdoctrine_restricted_to_group.py  0007_mysql8_default_value_fixes_20201003_1232.py  0008_auto_20210114_1733.py  0009_remove_webhook_is_embedded_remove_webhook_type_and_more.py  0009_remove_webhook_type.py  0010_remove_webhook_is_embedded.py  0010_use_ellipsis_character_in_strings.py  0011_setting.py  0011_settings_and_verbose_names.py  0012_migrate_app_settings_from_local_py_to_database.py  0012_populate_default_settings.py  0013_fleetcomm_channel.py  0014_update_models.py  0015_alter_discordpingtarget_options_and_more.py  0016_alliance_auth_proxy_models.py
fleetpings/providers/: applogger.py
fleetpings/static/fleetpings/css/: aa-bootstrap-fix.css  aa-bootstrap-fix.min.css  fleetpings.css  fleetpings.min.css  fleetpings.min.css.map
fleetpings/static/fleetpings/js/: fleetpings-autocomplete.js  fleetpings-autocomplete.min.js  fleetpings-autocomplete.min.js.map  fleetpings.js  fleetpings.min.js  fleetpings.min.js.map
fleetpings/static/fleetpings/libs/bootstrap5-autocomplete/1.1.42/: autocomplete.js  autocomplete.min.js  autocomplete.min.js.map
fleetpings/static/fleetpings/libs/flexdatalist/2.3.0/: README.md
fleetpings/templates/fleetpings/: base.html  form.html  index.html  ping.html
fleetpings/templates/fleetpings/bundles/: bootstrap5-autocomplete-js.html  clipboard-js.html  fleetpings-css.html  fleetpings-js.html  flexdatalist-css.html  flexdatalist-js.html
fleetpings/templates/fleetpings/form/: additionalInformation.html  createOptimer.html  createSrpLink.html  fleetCommander.html  fleetComms.html  fleetDoctrine.html  fleetName.html  fleetType.html  formupLocation.html  formupTime.html  pingChannel.html  pingTargets.html  prePing.html  srp.html
fleetpings/templates/fleetpings/partials/form/: form.html
fleetpings/templates/fleetpings/partials/form/hints/: ping-everyone.html
fleetpings/templates/fleetpings/partials/form/segments/: fleet-comms.html  fleet-doctrine.html  fleet-formup-location.html  fleet-type-loop.html  fleet-type.html  ping-targets-loop.html  ping-targets.html
fleetpings/templates/fleetpings/partials/header/: page-header.html
fleetpings/templates/fleetpings/partials/ping/: copy-paste-text.html  ping.html
fleetpings/templates/fleetpings/ping/: copy_paste_text.html
fleetpings/templatetags/: __init__.py  fleetpings.py  fleetpings_urls.py  fleetpings_versioned_static.py  set_variable.py
fleetpings/tests/: __init__.py  test_access.py  test_admin.py  test_ajax_calls.py  test_app_settings.py  test_auth_hooks.py  test_dhooks.py  test_helper_discord_webhook.py  test_helper_eve_images.py  test_helper_ping_context.py  test_helper_urls.py  test_installed_modules.py  test_model_discprdpingtarget.py  test_model_fleetcomm.py  test_model_fleetdoctrine.py  test_model_fleettype.py  test_model_formuplocation.py  test_model_setting.py  test_model_webhook.py  test_models.py  test_providers.py  test_templatetags.py  utils.py
locale/: ja.json  zh_Hans.json
testauth/: __init__.py  celery.py  local.py  settings.py  settings_aa3x.py  urls.py
testauth/settings/: local.py
testauth/settings/testing/: local.py
